# decorator_pp_cpp

./: .replit  BottleProtocol.h  CMakeLists.txt  DefaultBottle.cpp  DefaultBottle.h  README.md  main.cpp  run.sh
decorators/: BottleDecorator.h  ColoredBottleDecorator.cpp  ColoredBottleDecorator.h  PlastifiedBottle.cpp  PlastifiedBottle.h  StampedBottleDecorator.cpp  StampedBottleDecorator.h
